Project_website_UTS_V2

--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
       alert(message);
     }
   </script>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    .container {
+      flex-grow: 1;
+    }
+    footer {
+      background-color: #f8f9fa;
+      padding: 1rem 0;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="dashboard.php">3D Extrude ID Website</a>
+      <a class="navbar-brand" href="dashboard.php">3D Extrude ID</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
@@ -30,11 +49,19 @@
     </div>
   </nav>
 
-  <div class="container mt-5 text-center">
-    <h1>Welcome Our Website</h1>
-    <p>Please Login For Access Our Website</p>
-    <a href="login.html" class="btn btn-primary" onclick="showPopup('Login For Our Data')">Login</a>
-    <a href="register.html" class="btn btn-secondary" onclick="showPopup('Register For login, Note: Jangan Pake Password Asli!!!')">Register</a>
+  <!-- Main Content -->
+  <div class="container mt-5 d-flex flex-column align-items-center text-center">
+    <h1 class="mb-4">Welcome to Our Website</h1>
+    <p class="mb-4">Please Login to Access Our Website</p>
+    <div>
+      <a href="login.html" class="btn btn-primary me-2" onclick="showPopup('Login For Our Data')">Login</a>
+      <a href="register.html" class="btn btn-secondary" onclick="showPopup('Register For login, Note: Jangan Pake Password Asli!!!')">Register</a>
+    </div>
   </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 3D Extrude ID. All rights reserved.</p>
+  </footer>
 </body>
 </html>
