--- a/Index/index.html
+++ b/Index/index.html
@@ -215,7 +215,7 @@
                         <li><a href="#services">Filaments</a></li>
                         <li><a href="#work">Work</a></li>
                         <li><a href="#blog">Blog</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#contacts">Contact</a></li>
                         <li><a href="../index.html">Logout</a></li>
 
                     </ul>
@@ -948,7 +948,7 @@
                             <div class="col-sm-4 margin-bottom30 text-center">
                                 <i class="ion-ios-email-outline"></i>
                                 <h4>3dextrude.id@gmail.com</h4>
-                                <a href="3dextrude.id@gmail.com?subject=Pertanyaan%20Tentang%20Layanan&body=Halo,%0A%0ASaya%20tertarik%20dengan%20layanan%20Anda.%20Bolehkah%20saya%20mendapatkan%20informasi%20lebih%20lanjut?" class="btn btn-primary btn-radius btn-lg">Email Text</a>
+                                <a href="mailto:extrude3d.id@gmail.com?subject=Pertanyaan%20Tentang%20Layanan&body=Halo,%0A%0ASaya%20tertarik%20dengan%20layanan%20Anda.%20Bolehkah%20saya%20mendapatkan%20informasi%20lebih%20lanjut?" class="btn btn-primary btn-radius btn-lg">Email Text</a>
                             </div>
                             <div class="col-sm-4 margin-bottom30 text-center">
                                 <i class="bi bi-telephone text-black"></i>
